golang/k8s-manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-go
  labels:
    app: devops-go
spec:
  type: NodePort
  selector:
    app: devops-go
  ports:
    - name: http
      port: 80
      targetPort: 80
